[project]
name = "metaclip"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "tqdm",
  "ftfy",
  "braceexpand",
  "regex",
  "pandas",
  "submitit==1.2.1",
  # PyTorch 一式（バージョンは任意に固定可）
  "torch",
  "torchvision",
  "torchaudio",
  "transformers>=4.55.2",
]

# PyTorch の cu118 ホイールを使う
[[tool.uv.index]]
name = "pytorch-cu118"
url  = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
